+++++++++++
Python News
+++++++++++

What's New in Python 3.1.3?
===========================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #10391: Don't dereference invalid memory in error messages in the ast
  module.

Library
-------

- Issue #10459: Update CJK character names to Unicode 5.1.

- Issue #6098: Don't claim DOM level 3 conformance in minidom.

- Issue #5762: Fix AttributeError raised by ``xml.dom.minidom`` when an empty
  XML namespace attribute is encountered.

- Issue #1710703: Write structures for an empty ZIP archive when a ZipFile is
  created in modes 'a' or 'w' and then closed without adding any files. Raise
  BadZipfile (rather than IOError) when opening small non-ZIP files.

- Issue #4493: urllib.request adds '/' in front of path components which does not
  start with '/. Common behavior exhibited by browsers and other clients.

- Issue #6378: idle.bat now runs with the appropriate Python version rather than
  the system default. Patch by Sridhar Ratnakumar.

- Issue #10407: Fix two NameErrors in distutils.

- Issue #10198: fix duplicate header written to wave files when writeframes()
  is called without data.

- Issue #10467: Fix BytesIO.readinto() after seeking into a position after the
  end of the file.

- Issue #1682942: configparser supports alternative option/value delimiters.

Build
-----

- Backport r83399 to allow test_distutils to pass on installed versions.

- Issue #1303434: Generate ZIP file containing all PDBs (already done for rc1).

- Stop packaging versioncheck tool (already done for rc1).

Tests
-----

- Issue #9424: Replace deprecated assert* methods in the Python test suite.

Documentation
-------------

- Issue #10299: List the built-in functions in a table in functions.rst.


What's New in Python 3.1.3 release candidate 1?
===============================================

*Release date: 2010-11-13*

Core and Builtins
-----------------
